# BackEnd

buynow/: .gitignore  logger.py  pyproject.toml  run_with_tunnel.py
buynow/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
buynow/accounts/migrations/: 0001_initial.py  0002_alter_user_id.py  0002_user_is_dummy_user_user_discounted_cost_sum_and_more.py  0002_user_user_discounted_cost_sum_user_user_image_url_and_more.py  0003_user_is_dummy.py  0004_remove_user_user_id_remove_user_user_password_and_more.py
buynow/config/: authentication.py  kakaoapi.py  settings.py  urls.py
buynow/pricing/: apps.py  models.py  signals.py  utils.py
buynow/pricing/management/commands/: train_and_update_discounts.py  train_records.py  update_discounts.py  yest_update_then_train.py
buynow/pricing/migrations/: 0001_initial.py  0002_globalpricingparam.py
buynow/records/: models.py
buynow/records/management/commands/: generate_itemrecord_from_db.py
buynow/records/migrations/: 0001_initial.py  0002_itemrecord_is_dummy.py  0003_itemrecord_sold.py  0004_itemrecord_is_learned.py
buynow/reservations/: models.py  serializers.py  urls.py  views.py
buynow/reservations/migrations/: 0001_initial.py  0002_reservation_is_dummy_userlike_is_dummy.py
buynow/stores/: models.py  urls.py  views.py
buynow/stores/data/: dongjak_addresses.py  dummy_store_templates.py
buynow/stores/migrations/: 0001_initial.py  0002_store_is_dummy_storeitem_is_dummy_storemenu_is_dummy_and_more.py  0003_alter_store_store_category.py  0004_storemenu_dp_weight.py  0005_storecoordinate.py
(+5 files in other folders)
